--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,46 @@
 .byebug_history
 
 /.idea
+
+
+# Frontend Angular 2 ignores
+
+# compiled output
+/ui/dist
+/ui/tmp
+
+# dependencies
+/ui/node_modules
+
+# IDEs and editors
+/ui/.idea
+/ui/.project
+/ui/.classpath
+/ui/.c9/
+/ui/*.launch
+/ui/.settings/
+/ui/*.sublime-workspace
+
+# IDE - VSCode
+/ui/.vscode/*
+!/ui/.vscode/settings.json
+!/ui/.vscode/tasks.json
+!/ui/.vscode/launch.json
+!/ui/.vscode/extensions.json
+
+# misc
+/ui/.sass-cache
+/ui/connect.lock
+/ui/coverage/*
+/ui/libpeerconnection.log
+/ui/npm-debug.log
+/ui/testem.log
+/ui/typings
+
+# e2e
+/ui/e2e/*.js
+/ui/e2e/*.map
+
+#System Files
+/ui/.DS_Store
+/ui/Thumbs.db
